<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Expense Manager</string>
    <string name="amount">Amount</string>
    <string name="amount_to_settle">Amount to Settle:</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="preffered_name">Screen Name</string>
    <string name="url">http://172.20.0.222:8081/ExpenseServer/api/expenseService</string>
    <string name="password">Password</string>
    <string name="conf_password">Confirm Password</string>
    <string name="new_user"><u>New user? Register here!!</u></string>
    <string name="or">or</string>
    <string name="back_to_login"><u>Back to login.</u></string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="action_settings">Settings</string>
    <string name="expense_manager">EXPENSE MANAGER</string>
    <string name="title_activity_expense">Expenses</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="upgrade">Upgrade!!</string>
    <string name="no_trips">No expense-groups(EGs) available!! Please click on the + symbol to add an EG.</string>
    <string name="action_add_trip">Add EG</string>
    <string name="add_trip_name">Type EG name</string>
    <string name="add_screen_name">Type Screen name</string>
    <string name="trip_name">EG name</string>
    <string name="your_name">Screen name:</string>
    <string name="email">Email ID:</string>
    <string name="exit">Exit</string>
    <string name="next">Continue</string>
    <string name="screen_name">Enter a screen name:</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="no_expense">No expense added for this expense-group(EG)!! Please click on the + symbol to add an expense.</string>
    <string name="add_expense_name">Type expense name</string>
    <string name="add_expense_detail">Type expense detail</string>
    <string name="add_expense_amount">Type expense amount</string>
    <string name="action_add_expense">Add Expense</string>
    <string name="action_exit_eg">Exit EG</string>
    <string name="action_delete_trips">Delete EGs</string>
    <string name="action_delete_trip">Delete EG</string>
    <string name="action_add_people">Add People</string>
    <string name="no_people">Nobody has been added for this expense-group(EG)!! Please click on the + symbol to add someone.</string>
    <string name="no_updates">No unread updates.</string>
    <string name="scan_qr">Please scan the QR code from the other users device to add this expense-group</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="action_scan_qr">Scan QR code</string>
    <string name="action_upgrade">Upgrade to pro!</string>
    <string name="action_add_new">Add new</string>
    <string name="delete_trip_info">You can only delete trips which are either closed. If the selection includes trips which are not closed, those will not be deleted.</string>
    <string name="expenses">Expenses</string>
    <string name="no_expenses">No expense added for this expense-group!!</string>
    <string name="distribution">Expense Distribution</string>
    <string name="expense_name">Expense Name</string>
    <string name="expense_detail">Expense Detail</string>
    <string name="group_detail">Group Detail</string>
    <string name="spent_amount">Spent Amount</string>
    <string name="expense_admin">Admin</string>
    <string name="expense_creation_date">Created On</string>
    <string name="action_save_expense">Save Expense</string>
    <string name="action_delete_expense">Delete Expense</string>
    <string name="trips">Expense-Groups</string>
    <string name="people">People</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_people">Add People</string>
    <dimen name="qr_size">200dp</dimen>
    <string name="chart_size">200</string>
    <string name="qr_code_size">200</string>
    <string name="updates">Update Center</string>
    <string name="unit_id">ca-app-pub-3626039642054183/1450564550</string>
    <string name="select">Select:</string>
    <string name="all">All</string>
    <string name="none">None</string>
    <string name="settled">Settled</string>
    <string name="settle_expenses">Settle</string>
    <string name="unsettled">Unsettled</string>
    <string name="upgrade_features">If you upgrade to premium you will have the following features:\n 1. No ads!\n 2. Add unlimited EGs!\n 3. Add unlimited number of people to your EGs!\n 4. Access across all your devices.</string>
    <string name="setup">Just a Sec&#8230;</string>
    <string name="done">Almost Done&#8230;</string>
	
</resources>
