<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" >

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txt_expense_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/expense_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etxt_expense_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_expense_name"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="5dp"
            android:hint="@string/add_expense_name"
            android:inputType="textCapWords"
            android:maxLength="10" />

        <TextView
            android:id="@+id/txt_expense_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_expense_name"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/expense_detail"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etxt_expense_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_expense_detail"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="5dp"
            android:hint="@string/add_expense_detail"
            android:inputType="textCapSentences"
            android:lines="3"
            android:maxLength="50" />

        <TextView
            android:id="@+id/txt_expense_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_expense_detail"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/spent_amount"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etxt_expense_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_expense_amount"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="5dp"
            android:hint="@string/add_expense_amount"
            android:inputType="number"
            android:maxLength="12" />

        <TextView
            android:id="@+id/txt_expense_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_expense_amount"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/expense_admin"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etxt_expense_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_expense_admin"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="5dp"
            android:enabled="false"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/txt_expense_creation_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_expense_admin"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/expense_creation_date"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etxt_expense_creation_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_expense_creation_date"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="5dp"
            android:enabled="false"
            android:inputType="datetime" />
        
         <TextView
            android:id="@+id/txt_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_expense_creation_date"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/select"
            android:textSize="18sp"
            android:textStyle="bold" />
         
         <TextView
            android:id="@+id/txt_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_expense_creation_date"
            android:layout_toRightOf="@+id/txt_select"
            android:layout_toEndOf="@+id/txt_select"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/all"
            android:textSize="18sp"
            android:textColor="@color/app_color" />
         
         <TextView
            android:id="@+id/txt_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_expense_creation_date"
            android:layout_toRightOf="@+id/txt_all"
            android:layout_toEndOf="@+id/txt_all"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/none"
            android:textSize="18sp"
            android:textColor="@color/app_color" />

    </RelativeLayout>

</RelativeLayout>