<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl"
    android:layout_width="300dp"
    android:layout_height="300dp" >

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" 
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="18sp"/>
    
    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/tv_message"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/amount_to_settle"/>
    
    <EditText 
        android:id="@+id/et_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/tv_amount"
        android:inputType="numberDecimal"
        android:hint="@string/amount"/>
    
      <LinearLayout
        android:id="@+id/Footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_amount"
        android:layout_marginTop="1dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/custom_button"
            android:text="@string/yes" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/custom_button_cancel"
            android:text="@string/cancel" />
        
    </LinearLayout>

</RelativeLayout>