<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" 
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/delete_trip_info"
        android:textStyle="bold"
        android:textSize="17sp"/>

    <LinearLayout
        android:id="@+id/Footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_message"
        android:layout_marginTop="1dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_weight="1.0"
            android:background="@drawable/custom_button"
            android:text="@string/ok" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0.5dp"
            android:layout_marginStart="0.5dp"
            android:layout_weight="1.0"
            android:background="@drawable/custom_button"
            android:text="@string/cancel" />
    </LinearLayout>

</RelativeLayout>