<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp"
    android:paddingLeft="15dp"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:paddingRight="15dp"
    android:paddingTop="10dp"
    android:layout_gravity="center"
    android:background="@android:color/background_light" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_trip_title"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:text="@string/delete_trip_info"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:textSize="15sp" />

    <RelativeLayout
        android:id="@+id/Footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_message"
        android:layout_marginTop="15dp" >

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/btn_cancel"
            android:background="@drawable/custom_button_ok"
            android:text="@string/ok"
            android:textColor="@color/app_color_dark" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/custom_button_ok"
            android:text="@string/cancel"
            android:textColor="@color/app_color_dark" />
    </RelativeLayout>

</RelativeLayout>
