<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.trip.expensemanager.ExpenseActivity$PlaceholderFragment" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/txt_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/username"
                android:textSize="17sp" />

            <RelativeLayout
                android:id="@+id/rl_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_username" >

                <EditText
                    android:id="@+id/etxt_username"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:textColor="@drawable/disable_color" />

                <ProgressBar
                    android:id="@+id/pb_username"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/etxt_username"
                    android:layout_alignEnd="@id/etxt_username"
                    android:layout_alignRight="@id/etxt_username"
                    android:layout_alignTop="@id/etxt_username"
                    android:visibility="invisible" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txt_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_username"
                android:layout_margin="5dp"
                android:text="@string/password"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/etxt_password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_password"
                android:layout_margin="5dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@drawable/disable_color" />

            <TextView
                android:id="@+id/txt_conf_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etxt_password"
                android:layout_margin="5dp"
                android:text="@string/conf_password"
                android:textSize="17sp" />

            <RelativeLayout
                android:id="@+id/rl_conf_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_conf_password" >

                <EditText
                    android:id="@+id/etxt_conf_password"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/conf_password"
                    android:inputType="textPassword"
                    android:textColor="@drawable/disable_color" />

                <ProgressBar
                    android:id="@+id/pb_conf_password"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/etxt_conf_password"
                    android:layout_alignEnd="@id/etxt_conf_password"
                    android:layout_alignRight="@id/etxt_conf_password"
                    android:layout_alignTop="@id/etxt_conf_password"
                    android:visibility="invisible" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_conf_password"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:enabled="false"
                android:text="@string/register" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>